Fix z-index for #hero, .main-nav and hamburger menu icon

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,7 @@ header {
   min-width: 100%;
   min-height: 100%;
   object-fit: cover;
+  z-index: 1;
 }
 
 /* Navigation */
@@ -84,7 +85,7 @@ header {
   align-items: center;
   background-image: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0));
   font-size: 200%;
-  z-index: 1;
+  z-index: 2;
 }
 
 #menu {
@@ -110,7 +111,7 @@ label.hamburger {
   position: absolute;
   right: 1vw;
   top: 1vh;
-  z-index: 2;
+  z-index: 3;
 }
 
 input#hamburger {
